# rosbot

./: .gitignore  README.md
drawings/: electronics-box-odrive.SLDDRW  electronics-box-resistor.SLDDRW
experiments/: .gitignore
experiments/test_js/: package.json
experiments/test_rplidar/: launch_rplidar.bash  launch_rviz.bash
jobs/enclosure/: 01 2mm flat drill holes.tap  02 2mm flat screwheads.tap  03 2mm flat screw holes.tap  03.2 2mm flat screw holes missing.tap  04 2mm flat opening.tap  05 6mm chamfers.tap  06 5mm chamfers.tap
resin-prints/: _encoder-magnet-mount-v1.ctb
ros/: .gitignore  ecosystem.config.js  launch_frames.bash  launch_gazebo.bash  launch_imu.bash  launch_localization.bash  launch_map.bash  launch_mapping.bash  launch_navigation.bash  launch_robot.bash  launch_rosbot.bash  launch_rviz.bash  launch_slam.bash  launch_teleop.bash  remote.ecosystem.config.js  robot.ecosystem.config.js  run_build.bash  run_rosdep.bash
ros/map/: office.pgm  office.yaml  office_v6.pgm  office_v6.yaml
ros/src/bno055/: .gitignore  AUTHORS  CHANGELOG.rst  CONTRIBUTING.md  LEGACY_LICENSE  README.md  package.xml  requirements.txt  setup.cfg  setup.py
ros/src/bno055/.github/workflows/: build_test.yml  greetings.yml  release-candidate.yml  release.yml
ros/src/bno055/bno055/: __init__.py  bno055.py  registers.py
ros/src/bno055/bno055/connectors/: Connector.py  i2c.py  registers.py  uart.py
ros/src/bno055/bno055/error_handling/: exceptions.py
ros/src/bno055/bno055/params/: NodeParameters.py  bno055_params.yaml
ros/src/bno055/bno055/sensor/: SensorService.py
ros/src/bno055/docs/: bno055.rst  conf.py  connectors.rst  error_handling.rst  index.rst  params.rst  registers.rst  sensor.rst
ros/src/rosbot_bringup/: CMakeLists.txt  package.xml
ros/src/rosbot_bringup/config/: rosbot_controllers.yaml
ros/src/rosbot_bringup/launch/: gazebo.launch.py  imu.launch.py  localization.launch.py  map.launch.py  mapping.launch.py  navigation.launch.py  robot.launch.py  rosbot.launch.py  rviz.launch.py  slam.launch.py  slam_toolbox_localization.launch.py  slam_toolbox_mapping.launch.py
ros/src/rosbot_bringup/param/: rosbot_controllers.yaml
ros/src/teleop_twist_joy/: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
ros/src/teleop_twist_joy/config/: atk3.config.yaml  ps3-holonomic.config.yaml  ps3.config.yaml  rosbot.config.yaml  xbox.config.yaml  xbox_usb.config.yaml  xbox_usb.yaml  xd3.config.yaml
ros/src/teleop_twist_joy/include/teleop_twist_joy/: teleop_twist_joy.hpp
ros/src/teleop_twist_joy/launch/: teleop-launch.py  teleop.launch.py
ros/src/teleop_twist_joy/src/: teleop_node.cpp  teleop_twist_joy.cpp
ros/src/teleop_twist_joy/test/: differential_joy_launch_test.py  holonomic_joy_launch_test.py  no_enable_joy_launch_test.py  no_require_enable_joy_launch_test.py  only_turbo_joy_launch_test.py  six_dof_joy_launch_test.py  test_joy_twist.py  turbo_angular_enable_joy_launch_test.py  turbo_enable_joy_launch_test.py
ros/test_cpp/src/chat/: CMakeLists.txt
ros/test_cpp/src/chat/src/: listener.cpp
ros/test_js/: package-lock.json
ros/test_odrive_ros2xxx/src/odrive_interfaces/: CMakeLists.txt  README.md  package.xml
ros/test_odrive_ros2xxx/src/odrive_interfaces/srv/: AxisState.srv  VelocityControl.srv
ros/test_odrive_ros2xxx/src/odrive_ros2/: README.md  package.xml  setup.cfg
ros/test_odrive_ros2xxx/src/odrive_ros2/odrive_ros2/: odrive_node.py
roscpp/src/client_service/: CMakeLists.txt  README.md
rosjs/src/: listener.ts
solidworks/: .gitignore  robot.SLDASM
solidworks/50w-resistor/: 50w-resistor.SLDPRT
solidworks/M12-connector/: M12-connector-nut.SLDPRT  M12-female-through-panel.SLDPRT  M12-male-cable.SLDPRT
solidworks/MT30-M/: MT30-M-female.SLDPRT  MT30-M-mount.SLDPRT  MT30-with-mount.SLDASM
solidworks/XT60E1-M/: XT60E1-M.SLDASM
solidworks/adafruit-feather/: adafruit-feather.SLDPRT  feather-with-protoboard.SLDASM
solidworks/axle/: main-wheels-axle.SLDPRT
solidworks/axle-mount/: axle-mount-bottom.SLDPRT  axle-mount-top.SLDPRT  axle-mount.SLDASM
solidworks/battery/: ninebot-battery-base-mount.SLDPRT  ninebot-battery-base.SLDPRT  ninebot-battery-connector.SLDPRT  ninebot-battery-mount.SLDPRT  ninebot-battery-support.SLDPRT  ninebot-battery.SLDASM  ninebot-battery.SLDPRT
solidworks/bearing/: Mirrorbearing-10x5x4.SLDPRT  bearing-10x5x4.SLDPRT
solidworks/belts/: HTD-5M-425.SLDPRT  HTD-5M-460.SLDPRT
solidworks/bumper/: bumper.SLDPRT
solidworks/bus-bar/: bus-bar-body.SLDPRT  bus-bar-dual-mount.SLDPRT  bus-bar-dual-with-mount.SLDASM  bus-bar-screw.SLDPRT  bus-bar.SLDASM
solidworks/caster-wheel/: caster-wheel.SLDASM
solidworks/charge-port/: charge-port-mount.SLDPRT  charge-port.SLDASM  charge-port.SLDPRT
solidworks/corner-mount/: corner-mount-backing.SLDASM  corner-mount-backing.SLDPRT  corner-mount.SLDPRT
solidworks/drawings/: electronics-box.SLDDRW  main-wheels-axle.SLDDRW
solidworks/dxf/: profile-30x30.dxf
solidworks/e-stop/: e-stop.SLDPRT
solidworks/fan/: fan-30mm.SLDASM  (+1 more)
stl/: MT30-M-mount v1.STL  MT30-M-mount v2.STL  MT30-M-mount v3.STL  MT30-M-mount v4.STL  axle-mount-bottom v2.STL  axle-mount-bottom-v1.STL  axle-mount-top v2.STL  axle-mount-top-v1.STL  bumper v1.STL  bumper v2.STL  bumper v3.STL  bus-bar-dual-mount v1.STL  charge-port-mount v1.STL  charge-port-mount v2.STL  charge-port-mount v3.STL  corner-mount v2.STL  corner-mount-backing v1.STL  corner-mount-backing v2.STL  corner-mount-panel v1.STL  encoder-magnet-mount v1.STL  encoder-magnet-mount-v1.STL  fan-guard-30mm v1.STL  fan-guard-30mm v2.STL  fan-guard-30mm v3.STL  fan-guard-30mm v4.STL  front-caster-bottom left v5.STL  front-caster-bottom right v5.STL  front-caster-bottom v1.STL  front-caster-bottom v2.STL  front-caster-bottom v3.STL  front-caster-bottom v4.STL  front-wheel-mount left v1.STL  front-wheel-mount left v2.STL  front-wheel-mount left v3.STL  front-wheel-mount right v1.STL  front-wheel-mount right v2.STL  front-wheel-mount right v3.STL  front-wheel-mount v1.STL  front-wheel-mount-cap v1.STL  front-wheel-rim v1.STL  (+43 more)
(+169 files in other folders)
