<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odrive_ros2</name>
  <version>0.0.1</version>
  <description>ROS2 node for ODrive</description>
  <maintainer email="maze1024@gmail.com">Jiang Yue</maintainer>
  <license>MIT</license>

  <exec_depend>odrive_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
